# english_teaching_app

./: .gitignore  Dockerfile  LICENSE  README.md  feedback.mbox  feedbackkraus.mbox  jakubsultafeedback.mbox  pyproject.toml  uwsgi.ini
english_teaching_app/: blueprint.py  english_teaching_app.py  ff.py  makeAnal.py  nf.py  parsembox  service-worker.js
english_teaching_app/common/: database.py  utils.py
english_teaching_app/libs/: mailgun.py
english_teaching_app/models/: feedback.py  lesson.py  model.py  user.py
english_teaching_app/models/user/: __init__.py  decorators.py  errors.py  user.py
english_teaching_app/static/: main.css  main.js  offline.html  service-worker.js
english_teaching_app/templates/: ajax_send_analysis.html  base.html  formfactory.html  home.html  index.html_ARCHIVE17Nov2020  old_web.html  star.html  web.html
english_teaching_app/templates/archive/: bootstrap_border_table_experiment
english_teaching_app/templates/feedbacks/: index.html  new_feedback.html  pdf.html
english_teaching_app/templates/lessons/: .edit_feedback.html.swo  _old_index_table.html  edit_feedback.html  edit_lesson.html  index.html  new_lesson.html  view_data.html  view_feedback.html
english_teaching_app/templates/users/: index.html  login.html  register.html
english_teaching_app/views/: .lessons.py.swo  lessons.py  users.py
