[tool.poetry]
name = "english_teaching_app"
version = "0.1.0"
description = "An app for English language teachers and their students."
authors = ["SebastianDix <sebastiandix3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "*"
pymongo="*"
pdfkit="*"
premailer="*"
passlib="*"
requests_html="*"

[tool.poetry.dev-dependencies]
backtrace = "^0.2.1"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
